# prettysize-rs

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
examples/: blog.rs  readme.rs  tweet.rs
src/: fmt.rs  from_str.rs  lib.rs  ops.rs  parse.l  parse.rs  serde.rs  tests.rs  tests_nostd.rs
