[package]
name = "size"
version = "0.3.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
description = "A crate for expressing, formatting, and interacting with file sizes"
homepage = "https://github.com/neosmart/prettysize-rs"
repository = "https://github.com/neosmart/prettysize-rs"
readme = "README.md"
keywords = ["bytes", "prettysize", "size", "units", "formatting"]
categories = ["value-formatting", "rust-patterns", "no-std"]
license = "MIT"
edition = "2018"

[dependencies]

[features]
default = [ "std" ]
std = []
