[package]
name = "size"
version = "0.4.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>", "NeoSmart Technologies"]
description = "A crate for expressing, formatting, and interacting with file sizes"
homepage = "https://github.com/neosmart/prettysize-rs"
repository = "https://github.com/neosmart/prettysize-rs"
readme = "README.md"
keywords = ["bytes", "prettysize", "size", "units", "formatting"]
categories = ["value-formatting", "rust-patterns", "no-std"]
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1.0.198", default-features = false, optional = true, features = [ "derive"] }

[features]
default = [ "std" ]
serde = [ "std", "dep:serde" ]
std = []
